# ts-native

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  readme.md
.github/workflows/: test.yml
crates/ts-native-cli/: Cargo.toml
crates/ts-native-cli/src/: main.rs
crates/ts-native-cli/tests/: integration_smoke.rs
crates/ts-native-codegen/: Cargo.toml
crates/ts-native-codegen/src/: lib.rs
crates/ts-native-ir/: Cargo.toml
crates/ts-native-ir/src/: lib.rs
crates/ts-native-parser/: Cargo.toml
crates/ts-native-parser/src/: lib.rs
crates/ts-native-types/: Cargo.toml
crates/ts-native-types/src/: lib.rs
docs/: architecture.md  development.md
docs/specification/: README.md
docs/specification/v0/: 00-introduction.md  01-primitive-types.md  README.md
examples/: fibonacci.ts  hello.ts  type_inference.ts
scripts/: bootstrap.sh  build.sh
sections/: 02-variables-bindings-mutability.md
tests/fixtures/programs/fail/: invalid_reassign.ts  type_mismatch.ts
tests/fixtures/programs/pass/: arithmetic.ts  simple_const.ts
