[workspace]
members = [
    "crates/ts-native-parser",
    "crates/ts-native-types",
    "crates/ts-native-ir",
    "crates/ts-native-codegen",
    "crates/ts-native-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
authors = ["TS-Native Contributors"]
rust-version = "1.85"

[workspace.dependencies]
clap = { version = "4.5", features = ["derive"] }
thiserror = "2.0"

[workspace.lints.rust]
unsafe_code = "forbid"
unused_lifetimes = "warn"
unused_crate_dependencies = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
